# aggrocow

./: LICENSE  README.md  meson.build
doc/: README.md  meson.build
include/: aggrocow.h  meson.build
resources/data-samples/: README.md
src/: main.c  meson.build
src/libaggrocow/: lib.c  meson.build
